kubernetes-security/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
  labels:
    app: webapp
spec:
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      serviceAccountName: monitoring-service-account
      containers:
        - name: my-web
          image: nginx
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: data
              mountPath: /homework
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
            - name: new-configmap
              mountPath: /homework/conf
          readinessProbe:
            initialDelaySeconds: 0
            periodSeconds: 5
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 1
            httpGet:
              path: "index.html"
              port: 8000
          lifecycle:
            preStop:
              exec:
                command: [ 'sh','-c', 'rm -rf /homework/index.html' ]
      nodeSelector:
        homework: 'true'
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: homework-pvc
        - name: nginx-conf
          configMap:
            name: nginx-conf
        - name: new-configmap
          configMap:
            name: random-configmap
